# biblia_interativa

./: .gitignore  Home.py  app.py  busca.py  leitura.py  pyproject.toml  readme.md  requirements.txt  utils.py
.streamlit/: config.toml
pages/: 1_📖_Leitura.py  2_🔍_Busca_Simples.py  3_🔍+_Busca_Avançada.py  4_⚖️_Comparação.py  5_📝_Anotações.py  6_📊_Estatísticas.py
src/: __init__.py  annotations.py  database.py  error_handler.py  export.py  logger.py  optimize.py  ui_utils.py  utils.py
tests/: test_database.py
